--- a/market_next_door_api/Procfile
+++ b/market_next_door_api/Procfile
@@ -1,1 +1,4 @@
 web: gunicorn market_next_door_api.wsgi
+# release: python manage.py makemigrations --noinput
+# release: python manage.py collectstatic --noinput
+# release: python manage.py migrate --noinput
