--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: "Run tests"
           command: |
             . .venv/bin/activate
-            cd market_next_door_api
+            cd market_next_door_api/market_next_door_api
             python3 manage.py test market_next_door_api.tests
 
 # Orchestrate jobs using workflows
