circle ci trial

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
           name: "Run tests"
           command: |
             . .venv/bin/activate
-            cd market_next_door_api/market_next_door_api
-            python3 manage.py test market_next_door_api.tests
+            cd market_next_door_api
+            python3 manage.py test market_next_door_api/market_next_door_api.tests
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
