--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
       - image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
-    environment:
-      CIRCLECI: 'true'
+
     steps:
       - checkout
       - run:
@@ -30,6 +29,7 @@ jobs:
           command: |
             python -m venv .venv
             . .venv/bin/activate
+            cd market_next_door_api
             /home/circleci/project/.venv/bin/python -m pip install --upgrade pip
             pip install -r requirements.txt
 
